tests/e2e/pass/m21_str_data_subscript.ep
# EXIT: 66
fun main(): void {
    let s = "ABC"
    os.ExitProcess(i64(s[1]))
}
